--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <header th:fragment="header" class="Navigation-module-container-2t2XT">
-  <div class="Navigation-module-wrapper-VDNDW">
-    <div class="Navigation-module-sections-tzP7z">
-      <div class="Navigation-module-left-FaRmB">
+    <div class="Navigation-module-wrapper-VDNDW">
+        <div class="Navigation-module-sections-tzP7z">
+            <div class="Navigation-module-left-FaRmB">
         <span>
           <div class="HeaderLogo-module-headerLogo-lWX4m">
             <a class="HeaderLogo-module-link-kdP1e" href="/">
@@ -14,44 +14,101 @@
             </a>
           </div>
         </span>
-      </div>
-      <nav class="NavigationItems-module-center-cd-0t">
-        <a class="NavigationItem-module-item-vXU--" href="/series">Seriale</a>
-        <a class="NavigationItem-module-item-vXU--" href="/movies">Filmy</a>
-        <a class="NavigationItem-module-item-vXU--" href="/kids">Dla dzieci</a>
-      </nav>
-      <div class="Navigation-module-right-643YK">
-        <div class="SearchButton-module-container-oHmID">
-          <a class="SearchButton-module-icon-zn1mS" href="/search"></a>
-        </div>
-        <a class="NavigationItem-module-item-vXU-- NavigationItem-module-library-E3ML5 NavigationItem-module-hide-n07a1"
-           href="/library"></a>
-        <div class="UserMenu-module-detailsAuthenticated-Ku3RE">
-          <button class="UserMenu-module-toggle-mkB6K">
-            <div class="UserMenu-module-buttonbox-HF7RL">
-              <div class="ProfileAvatar-module-container-aV27r ProfileAvatar-module-small-HCZsN"
-                   tabindex="-1">
-                <div class="ProfileAvatar-module-editContainer-mwkk5">
-                  <img class="ProfileAvatar-module-avatar-2Qy4H" alt="avatar"
-                       src="https://i-viaplay-com.akamaized.net/viaplay-static-prod/profiles/avatars/adults/boombox.png?width=500&amp;height=500">
-                  <div class="ProfileAvatar-module-editIcon-zlhbG"></div>
-                </div>
-              </div>
             </div>
-          </button>
+            <nav class="NavigationItems-module-center-cd-0t">
+                <a class="NavigationItem-module-item-vXU--" href="/series">Seriale</a>
+                <a class="NavigationItem-module-item-vXU--" href="/movies">Filmy</a>
+                <a class="NavigationItem-module-item-vXU--" href="/kids">Dla dzieci</a>
+            </nav>
+            <div class="Navigation-module-right-643YK">
+                <div class="SearchButton-module-container-oHmID">
+                    <a class="SearchButton-module-icon-zn1mS" href="/search"></a>
+                </div>
+                <a class="NavigationItem-module-item-vXU-- NavigationItem-module-library-E3ML5 NavigationItem-module-hide-n07a1"
+                   href="/library">
+                </a>
+                <div class="UserMenu-module-detailsAuthenticated-Ku3RE UserMenu-module-activeHover-jkgiL">
+                    <button class="UserMenu-module-toggle-mkB6K" data-testhook="header-authenticated-user">
+                        <div class="UserMenu-module-buttonbox-HF7RL">
+                            <div class="ProfileAvatar-module-container-aV27r ProfileAvatar-module-small-HCZsN"
+                                 tabindex="-1">
+                                <div class="ProfileAvatar-module-editContainer-mwkk5"><img
+                                        class="ProfileAvatar-module-avatar-2Qy4H" alt="avatar"
+                                        src="https://i-viaplay-com.akamaized.net/viaplay-static-prod/profiles/avatars/adults/boombox.png?width=500&amp;height=500">
+                                    <div class="ProfileAvatar-module-editIcon-zlhbG"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </button>
+                    <div class="DropDownUserMenu-module-dropdown-IuMOF">
+                        <div class="DropDownUserMenu-module-boxShadow-Ymkx0">
+                            <ul class="DropDownUserMenu-module-dropdownList--L-em">
+                                <ul class="DropDownUserMenu-module-libraryContainer-1aPF8">
+                                    <li class="DropDownUserMenu-module-textItem-KCl5W DropDownUserMenu-module-library-UBRPc">
+                                        <a class="NavigationItem-module-item-vXU-- NavigationItem-module-compact--avrA NavigationItem-module-library-E3ML5"
+                                           data-testhook="user-menu-library"
+                                           th:href="@{/library}">
+                                            <span>Moja biblioteka</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <ul>
+                                    <li>
+                                        <a class="NavigationItem-module-item-vXU-- NavigationItem-module-compact--avrA NavigationItem-module-watched-mwewA"
+                                           th:href="@{/profiles/add}">
+                                            <span>Dodaj profil</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="NavigationItem-module-item-vXU-- NavigationItem-module-compact--avrA NavigationItem-module-watched-mwewA"
+                                           th:href="@{/profiles}">
+                                            <span>Ustawienia profilu</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <ul>
+                                    <li>
+                                        <a class="NavigationItem-module-item-vXU-- NavigationItem-module-compact--avrA NavigationItem-module-watched-mwewA"
+                                           th:href="@{/watched}">
+                                            <span>Dziennik aktywności</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="NavigationItem-module-item-vXU-- NavigationItem-module-compact--avrA NavigationItem-module-watched-mwewA"
+                                           th:href="@{/account}">
+                                            <span>Moje konto</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="NavigationItem-module-item-vXU-- NavigationItem-module-compact--avrA NavigationItem-module-watched-mwewA"
+                                           th:href="@{/support}">
+                                            <span>Pomoc techniczna</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <ul>
+                                    <li>
+                                        <a class="NavigationItem-module-item-vXU-- NavigationItem-module-compact--avrA NavigationItem-module-watched-mwewA"
+                                           th:href="@{/admin}">
+                                            <span>Strona administratorska</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <ul>
+                                    <li>
+                                        <a class="Buttons-module-dark-Di3pP DropDownUserMenu-module-logoutButton-VFuHS"
+                                           th:href="@{/logout}" tabindex="0">
+                                            <span>Wyloguj</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <button class="Navigation-module-toggleNavigation-uQPGv" id="toggle-navigation"></button>
-        <nav class="NavigationItems-module-navigation-AW08m NavigationItems-module-hide-bZgrX">
-          <a class="NavigationItem-module-item-vXU-- NavigationItem-module-compact--avrA"
-             href="/series">Seriale</a>
-          <a class="NavigationItem-module-item-vXU-- NavigationItem-module-compact--avrA"
-             href="/movies">Filmy</a>
-          <a class="NavigationItem-module-item-vXU-- NavigationItem-module-compact--avrA"
-             href="/kids">Dla dzieci</a>
-        </nav>
-      </div>
     </div>
-  </div>
 </header>
 
 </html>
