--- a/src/main/resources/templates/series-title.html
+++ b/src/main/resources/templates/series-title.html
@@ -231,7 +231,7 @@
                                                      class="Item-module-item-yTZtG Item-module-carouselItem-Q3n9V Item-module-landscapeItem-Sf-nw">
                                                     <div class="Item-module-box-4uBp3 Item-module-show-qrDtq">
                                                         <a class="Item-module-link-Lms-C" tabindex="-1"
-                                                           th:with="formattedTitle=${relatedSeries.title.replace(' ', '-')}"
+                                                           th:with="formattedTitle=${relatedSeries.title.replace(' ', '-')+'/sezon-1'}"
                                                            th:href="@{/series/{formattedTitle}(formattedTitle=${formattedTitle})}">
                                                         </a>
                                                         <div class="Item-module-image-CGday"
