--- a/src/main/resources/templates/admin/manage-series.html
+++ b/src/main/resources/templates/admin/manage-series.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="/styles/main.css" th:href="@{/styles/main.css}" type="text/css">
 </head>
 <body>
+
 <div class="Layout-module-internal-page--krBv">
     <div th:replace="~{header :: header}"></div>
-    <h1 class="page-header-admin">Panel administracyjny</h1>
+    <h1 class="page-header-admin">Panel administracyjny - zarządzaj serialami</h1>
     <div id="content" class="admin-panel">
         <div th:replace="~{admin/sidebar :: sidebar}"></div>
         <div class="main-content">
-
         </div>
     </div>
     <div th:replace="~{footer :: footer}"></div>
